--- a/src/sum/new_session.html
+++ b/src/sum/new_session.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <form action="/openid/authorization" method="POST">
-        <input type="hidden" name="scope" value="{{ .scope }}">
-		<input type="hidden" name="response_type" value="{{ .response_type }}">
-		<input type="hidden" name="client_id" value="{{ .client_id }}">
-		<input type="hidden" name="redirect_uri" value="{{ .redirect_uri }}">
-		<input type="hidden" name="state" value="{{ .state }}">
-		<input type="hidden" name="response_mode" value="{{ .response_mode }}">
-		<input type="hidden" name="nonce" value="{{ .nonce }}">
-		<input type="hidden" name="display" value="{{ .display }}">
-		<input type="hidden" name="prompt" value="{{ .prompt }}">
-		<input type="hidden" name="max_age" value="{{ .max_age }}">
-		<input type="hidden" name="ui_locales" value="{{ .ui_locales }}">
-		<input type="hidden" name="id_token_hint" value="{{ .id_token_hint }}">
-		<input type="hidden" name="login_hint" value="{{ .login_hint }}">
-		<input type="hidden" name="acr_values" value="{{ .acr_values }}">
+        <input type="hidden" name="scope" value="{{ .request.Scope }}">
+		<input type="hidden" name="response_type" value="{{ .request.ResponseType }}">
+		<input type="hidden" name="client_id" value="{{ .request.ClientID }}">
+		<input type="hidden" name="redirect_uri" value="{{ .request.RedirectURI }}">
+		<input type="hidden" name="state" value="{{ .request.State }}">
+		<input type="hidden" name="response_mode" value="{{ .request.ResponseMode }}">
+		<input type="hidden" name="nonce" value="{{ .request.Nonce }}">
+		<input type="hidden" name="display" value="{{ .request.Display }}">
+		<input type="hidden" name="prompt" value="{{ .request.Prompt }}">
+		<input type="hidden" name="max_age" value="{{ .request.MaxAge }}">
+		<input type="hidden" name="ui_locales" value="{{ .request.UILocales }}">
+		<input type="hidden" name="id_token_hint" value="{{ .request.IDTokenHint }}">
+		<input type="hidden" name="login_hint" value="{{ .request.LoginHint }}">
+		<input type="hidden" name="acr_values" value="{{ .request.ACRValues }}">
         <label for="username">Username</label>
         <input id="username" name="username" type="text">
         <label for="password">Password</label>
