--- a/src/sum/new_session.html
+++ b/src/sum/new_session.html
@@ -7,6 +7,9 @@
     <title>Sign in | Nubes</title>
 </head>
 <body>
+	{{ if .logo }}
+	<img src="{{ .logo }}" />
+	{{ end }}
     <form action="/openid/authorization" method="POST">
         <input type="hidden" name="scope" value="{{ .request.Scope }}">
 		<input type="hidden" name="response_type" value="{{ .request.ResponseType }}">
@@ -28,5 +31,12 @@
         <input id="password" name="password" type="password">
         <input type="submit" value="Sign in">
     </form>
+
+	{{ if .policy }}
+		<a id="policy_uri" href="{{ .policy }}">Privacy policy</a>
+	{{ end }}
+	{{ if .tos }}
+		<a id="tos_uri" href="{{ .tos }}">Terms of service</a>
+	{{ end }}
 </body>
 </html>
